添加日志记录功能，允许采集到日志后存储进elasticsearch

--- a/mock-s3-storage/services/storage/config.yaml
+++ b/mock-s3-storage/services/storage/config.yaml
@@ -28,3 +28,15 @@ metrics:
   labels:
     environment: "development"
     service: "storage"
+
+logs:
+  level: "info"
+  format: "json"
+  output: ["stdout"]
+  elasticsearch:
+    enabled: true
+    host: "my-elasticsearch"
+    port: 9200
+    index: "storage-service-logs"
+    use_ssl: false
+    max_retries: 3
