实现了opentelemetry日志采集与存储功能，日志中包括request_id和host_id

--- a/mock-s3-storage/services/storage/config.yaml
+++ b/mock-s3-storage/services/storage/config.yaml
@@ -25,3 +25,19 @@ opentelemetry:
   metrics_port: 1080
   metrics_path: "/metrics"
   enable_tracing: false
+
+
+# 日志配置
+logging:
+  level: "info"
+  format: "json"
+  output: ["stdout", "elasticsearch"]
+  elasticsearch:
+    enabled: true
+    host: "localhost"
+    port: 9200
+    index: "storage-service-logs"
+    username: ""
+    password: ""
+    use_ssl: false
+    max_retries: 3
