优化了项目结构

--- a/mock-s3-storage/services/storage/config.yaml
+++ b/mock-s3-storage/services/storage/config.yaml
@@ -36,7 +36,7 @@ logging:
     enabled: true
     host: "localhost"
     port: 9200
-    index: "storage-service-logs"
+    index: "mock-storage-service-logs"
     username: ""
     password: ""
     use_ssl: false
