feat(observability): 修复Prometheus告警规则支持并优化规则同步机制
- 在prometheus.yml中配置告警规则文件路径
- 修改docker-compose.yml挂载规则目录
- 重构AlertService，移除本地文件存储，直接写入容器
- 添加容器内规则文件写入的容错机制

--- a/mock/s3/deployments/docker-compose.yml
+++ b/mock/s3/deployments/docker-compose.yml
@@ -84,6 +84,7 @@ services:
     volumes:
       - prometheus-data:/prometheus
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./prometheus/rules:/etc/prometheus/rules:rw
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
