--- a/mock/s3/deployments/observability/prometheus.yml
+++ b/mock/s3/deployments/observability/prometheus.yml
@@ -5,6 +5,10 @@ global:
     cluster: mock-s3
     environment: docker
 
+# 告警规则文件
+rule_files:
+  - "/etc/prometheus/rules/*.yml"
+
 scrape_configs:
   # Prometheus自身的指标
   - job_name: 'prometheus'
