feat(prometheus): 实现Alertmanager兼容API并重构告警处理
- 新增Alertmanager API v2兼容接口用于接收Prometheus告警
- 重构告警服务架构，替换原有的轮询模式为推送模式
- 添加docker-compose配置支持Prometheus管理API
- 移除过时的AlertWebhookService实现

--- a/mock/s3/deployments/observability/prometheus.yml
+++ b/mock/s3/deployments/observability/prometheus.yml
@@ -9,6 +9,14 @@ global:
 rule_files:
   - "/etc/prometheus/rules/*.yml"
 
+# Alerting 配置 - 将告警发送到 Prometheus Adapter (伪 Alertmanager)
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+            - 'host.docker.internal:8081'  # Prometheus Adapter 运行在宿主机的 8081 端口
+      api_version: v2  # 使用 Alertmanager API v2
+
 scrape_configs:
   # Prometheus自身的指标
   - job_name: 'prometheus'
