--- a/mock/s3/deployments/docker-compose.yml
+++ b/mock/s3/deployments/docker-compose.yml
@@ -89,6 +89,9 @@ services:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--web.enable-lifecycle'
+      - '--web.enable-admin-api'  # 启用管理API以支持配置重载
+    extra_hosts:
+      - "host.docker.internal:host-gateway"  # 允许容器访问宿主机
     restart: unless-stopped
 
   # Grafana - 可视化
