--- a/cmd/zeroops/Dockerfile
+++ b/cmd/zeroops/Dockerfile
@@ -1,11 +1,11 @@
-FROM golang:1.24-alpine AS builder
+FROM docker.m.daocloud.io/library/golang:1.24-alpine AS builder
 WORKDIR /src
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /out/zeroops ./cmd/zeroops
 
-FROM gcr.io/distroless/base-debian12
+FROM gcr.m.daocloud.io/distroless/base-debian12:nonroot
 WORKDIR /app
 COPY --from=builder /out/zeroops /app/zeroops
 # 复制配置文件目录
