feat(grafana): 添加QPS监控面板并配置匿名访问
添加MockS3的QPS监控仪表板，包含服务QPS、总QPS、按路径QPS等面板
修改docker-compose配置，启用Grafana匿名访问并更改端口映射

--- a/mock/s3/deployments/docker-compose.yml
+++ b/mock/s3/deployments/docker-compose.yml
@@ -103,11 +103,17 @@ services:
       infra-network:
         ipv4_address: 172.21.0.21
     ports:
-      - "3000:3000"
+      - "3001:3000"
     environment:
       GF_SECURITY_ADMIN_USER: ${GRAFANA_USER:-admin}
       GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_PASSWORD:-admin123}
       GF_INSTALL_PLUGINS: grafana-piechart-panel
+      # 启用匿名访问
+      GF_AUTH_ANONYMOUS_ENABLED: "true"
+      GF_AUTH_ANONYMOUS_ORG_NAME: "Main Org."
+      GF_AUTH_ANONYMOUS_ORG_ROLE: "Admin"
+      GF_AUTH_BASIC_ENABLED: "false"
+      GF_AUTH_DISABLE_LOGIN_FORM: "true"
     volumes:
       - grafana-data:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning:ro
